apps/betaknesset/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: betaknesset-elasticsearch-kibana
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  rules:
  - host: betaknesset-elasticsearch.hasadna.org.il
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: betaknesset-elasticsearch-es-http
            port:
              number: 9200
  - host: betaknesset-kibana.hasadna.org.il
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: betaknesset-kibana-kb-http
            port:
              number: 5601
  tls:
  - hosts:
    - betaknesset-elasticsearch.hasadna.org.il
    - betaknesset-kibana.hasadna.org.il
    secretName: betaknesset-elasticsearch-kibana-cert
